deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollout-deployment
  labels:
    app: web

spec:
  selector:
    matchLabels:
      v1: green
      v2: blue
  template:
    metadata:
      labels:
        v1: green
        v2: blue
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "9113"
    spec:
      containers:
        - name: app-green
          image: xlp67/girus3
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
