deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-canary
  namespace: default
  labels:
    environment: canary
spec:
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
        - name: nginx
          image: xlp67/girus2
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary
  namespace: default
  labels:
    environment: canary
    release: web
spec:
  selector:
    environment: canary
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
