deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-prod
  namespace: default
  labels:
    environment: prod
spec:
  selector:
    matchLabels:
      app: prod
  template:
    metadata:
      labels:
        app: prod
    spec:
      containers:
        - name: nginx
          image: xlp67/girus1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-prod
  namespace: default
  labels:
    environment: prod
    release: web
spec:
  selector:
    app: prod
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
