services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-green
  labels:
    release: web
    role: green
spec:
  selector:
    v1: green
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: app-blue
  labels:
    release: web
    role: blue
spec:
  selector:
    v2: blue
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
